대략적인 UI 수정

--- a/Client/twiths_/Base.lproj/Main.storyboard
+++ b/Client/twiths_/Base.lproj/Main.storyboard
@@ -69,6 +69,16 @@
             </objects>
             <point key="canvasLocation" x="-680" y="736"/>
         </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="P1R-tk-4yW">
+            <objects>
+                <viewControllerPlaceholder id="U1k-TP-khG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="9zZ-44-4Ql"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hTK-L2-fBU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-350" y="736"/>
+        </scene>
         <!--Search-->
         <scene sceneID="M6I-T3-P79">
             <objects>
@@ -90,6 +100,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="DQP-nY-Hkf" kind="relationship" relationship="viewControllers" id="eVx-fU-Kql"/>
+                        <segue destination="U1k-TP-khG" kind="relationship" relationship="viewControllers" id="BDr-FP-6RA"/>
                         <segue destination="kQt-DH-d9a" kind="relationship" relationship="viewControllers" id="9WH-Ri-83e"/>
                         <segue destination="Evy-jk-Eur" kind="relationship" relationship="viewControllers" id="18u-g6-SRk"/>
                     </connections>
